tests/toy/neg/001202_mutation.toylang
program a = { program if a then sleep; } .
